<resources>
    <string name="app_name">JPAManager</string>
    <string name="reTry">تلاش دوباره</string>
    <string name="dismiss">بستن</string>
    <string name="userName">نام کاربری</string>
    <string name="password">رمز ورود</string>
    <string name="enter">ورود</string>
    <string name="search">جستجو</string>
    <string name="searchByNameCodeVisitor">جستجو(بر اساس نام،کد و ویزیتور مشتری)</string>
    <string name="loginByBiometric">ورود با اثر انگشت</string>
    <string name="onAuthenticationError">اثر انگشت شما تایید نشد</string>
    <string name="passwordIsInCorrect">رمز اشتباه است</string>
    <string name="updateIsSuccess">بروزرسانی با موفقیت انجام شد</string>
    <string name="ipIsIncorrect">آدرس وارد شده اشتباه است</string>
    <string name="bePatient">شکیبا باشید…</string>
    <string name="doYouWantToExitApp">آیا برای خروج از برنامه مطمئن هستید؟</string>
    <string name="doYouWantToUpdateApp">نسخه جدید برنامه در دسترس است،آیا برای دانلود آن مطمئن هستید؟</string>
    <string name="newIp">new ip</string>
    <string name="ipPassword">ip password</string>
    <string name="comfortableSpace">فضایی راحت</string>
    <string name="processManagement">برای مدیریت فرآیندهایتان</string>
    <string name="exclamationMark">!</string>
    <string name="forgetPassword">فراموشی رمز عبور</string>
    <string name="cardboard">کارتابل</string>
    <string name="home">خانه</string>
    <string name="report">گزارش</string>
    <string name="profile">پروفایل</string>
    <string name="pinCard">پین کارت</string>
    <string name="invoice">پیش فاکتور</string>
    <string name="licenseAssignment">تخصیص مجوز</string>
    <string name="check">چک</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="personnelNumber">کد پرسنلی</string>
    <string name="dot">:</string>
    <string name="contactSupport">تماس با پشتیبانی</string>
    <string name="hr">منابع انسانی</string>
    <string name="sale">فروش</string>
    <string name="financial">مالی</string>
    <string name="indebtedness">بدهکاری</string>
    <string name="salesAmount">مقدار فروش</string>
    <string name="creditor">بستانکار</string>
    <string name="comparativeReport">گزارش مقایسه ای</string>
    <string name="financialReport">گزارش مالی</string>
    <string name="exit">خروج</string>
    <string name="filterBy">فیلتر بر اساس</string>
    <string name="visitorName">نام ویزیتور</string>
    <string name="startEndDate">تاریخ شروع و پایان</string>
    <string name="customerName">نام مشتری</string>
    <string name="showDetail">مشاهده جزییات</string>
    <string name="routeName">نام مسیر</string>
    <string name="supportNumber">026–6565635</string>
    <string name="date">تاریخ</string>
    <string name="orderNumber">شماره سفارش</string>
    <string name="orderAmount">مبلغ سفارش</string>
    <string name="customerCode">کد مشتری</string>
    <string name="shopName">نام فروشگاه</string>
    <string name="rial">ریال</string>
    <string name="toman">تومان</string>
    <string name="remained">مانده</string>
    <string name="address">آدرس</string>
    <string name="customerFinancialState">وضعیت مالی مشتری</string>
    <string name="products">لیست کالاها</string>
    <string name="confirmOrder">تایید سفارش</string>
    <string name="rejectOrder">عدم تایید سفارش</string>
    <string name="orderCount">تعداد سفارش</string>
    <string name="productName">نام محصول</string>
    <string name="fi">قیمت واحد</string>
    <string name="count">تعداد</string>
    <string name="piece">عدد</string>
    <string name="moreDetail">جزییات بیشتر</string>
    <string name="finalAmount">قیمت نهایی</string>
    <string name="receivingMoreItems">درحال دریافت اطلاعات</string>
    <string name="chooseReason">انتخاب دلیل</string>
    <string name="description">توضیحات</string>
    <string name="orderSelectedIsEmpty">هیچ سفارشی انتخاب نشده</string>
    <string name="disApprovalReasonIsEmpty">دلایل رد شدن سفارش خالی است</string>
    <string name="setDateFrom">از %1$s - تا %2$s</string>
    <string name="doYouWantToExitAccount">آیا برای خروج از اکانت مطمئن هستید؟</string>
    <string name="amountOfDebt">میزان بدهی</string>
    <string name="cashDebitAmount">میزان بدهی نقدی</string>
    <string name="information">اطلاعات</string>
    <string name="purchaseAmount">مبلغ خرید</string>
    <string name="dateOfFirstPurchase">تاریخ اولین خرید</string>
    <string name="dateOfLastPurchase">تاریخ آخرین خرید</string>
    <string name="notRegisteredCheck">چک ثبت نشده</string>
    <string name="notRegisteredCheckAmount">مبلغ چک ثبت نشده</string>
    <string name="notRegisteredCheckCount">تعداد چک ثبت نشده</string>
    <string name="wareHouseStocks">موجودی انبار</string>
    <string name="bouncedCheck">چک برگشتی</string>
    <string name="bouncedCheckAmount">مبلغ چک برگشتی</string>
    <string name="bouncedCheckCount">تعداد چک برگشتی</string>
    <string name="payedCheck">چک پرداخت شده</string>
    <string name="payedCheckAmount">مبلغ چک پرداخت شده</string>
    <string name="payedCheckCount">تعداد چک پرداخت شده</string>
    <string name="notDueCheck">چک سررسید نشده</string>
    <string name="notDueCheckAmount">مبلغ چک سررسید نشده</string>
    <string name="notDueCheckCount">تعداد چک سررسید نشده</string>
    <string name="guaranteeCheck">چک ضمانت</string>
    <string name="guaranteeCheckAmount">مبلغ چک ضمانت</string>
    <string name="guaranteeCheckCount">تعداد چک ضمانت</string>
    <string name="checkNumber">شماره چک</string>
    <string name="checkAmount">مبلغ چک</string>
    <string name="stateOfCheck">وضعیت چک</string>
    <string name="reasonForTheBouncedCheck">دلیل برگشت خوردن چک</string>
    <string name="receiveDate">تاریخ دریافت</string>
    <string name="dueDate">تاریخ سررسید</string>
    <string name="statusDate">تاریخ وضعیت</string>
    <string name="bankName">نام بانک</string>
    <string name="branchName">نام شعبه</string>
    <string name="accountNumber">شماره حساب</string>
    <string name="checkOwnerName">صاحب حساب</string>
    <string name="returnInvoice">پیش فاکتور برگشتی</string>
    <string name="order">سفارش</string>
    <string name="totalSale">جمع فروش</string>
    <string name="pluralReturn">جمع مرجوعی</string>
    <string name="pluralOrder">جمع سفارشات</string>
    <string name="fingerprint">ورود با اثر انگشت</string>
    <string name="actionIsDone">انجام شد</string>
    <string name="orderStateNoState">بدون وضعیت</string>
    <string name="orderState">وضعیت سفارش</string>
    <string name="chooseCurrency">انتخاب نوع ارز</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="debit">بدهکار</string>
    <string name="edit">ویرایش</string>
    <string name="year">سال</string>
    <string name="netSales">خالص فروش</string>
    <string name="cartType">نوع سبد</string>
    <string name="orderType">نوع سفارش</string>
    <string name="listIsEmpty">لیست خالی است</string>
    <string name="loginIsSuccess">ورود با موفقیت انجام شد</string>




    <string name="logoDescription">logo</string>
    <string name="fingerPrintDescription">finger Print</string>
    <string name="iconDescription">icon</string>
    <string name="profileDescription">image profile</string>
    <string name="closeDescription">close</string>

    <string name="colon">:</string>
    <string name="dash">-</string>
    <string name="space"> </string>

    <string-array name="orderState">
        <item>بدون وضعیت</item>
        <item>تایید شده</item>
        <item>عدم تایید</item>
        <item>همه</item>
    </string-array>


</resources>