<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.hoomanholding.jpamanager.view.fragment.profile.ProfileViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/drawable_border_curve"
            android:layout_marginTop="@dimen/_15sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageViewProfile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.35"
                app:layout_constraintDimensionRatio="H,1:1" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profileDescription"
                    android:scaleType="fitXY"
                    app:loadImage="@{viewModel.userInfoLiveData.profileImageName}"
                    app:SystemType="@{viewModel.userInfoLiveData.systemType}"
                    app:setEntityType="@{viewModel.entityType}"
                    app:bearerToken="@{viewModel.bearerToken}"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewMobile"
                android:layout_width="0dp"
                android:layout_height="5dp"
                app:layout_constraintTop_toTopOf="@id/imageViewProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewProfile"
                app:layout_constraintBottom_toBottomOf="@id/imageViewProfile"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                android:fontFamily="@font/iransans_medium" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/textViewMobile"
                app:layout_constraintEnd_toEndOf="@id/textViewMobile"
                app:layout_constraintBottom_toTopOf="@id/textViewMobile"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                android:fontFamily="@font/iransans_medium"
                app:setTitle="@{@string/fullName}"
                app:setValue="@{viewModel.userInfoLiveData.fullName}"
                app:setSplitter="@{@string/dot}"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/textViewMobile"
                app:layout_constraintEnd_toEndOf="@id/textViewMobile"
                app:layout_constraintTop_toBottomOf="@id/textViewMobile"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                android:fontFamily="@font/iransans_medium"
                app:setTitle="@{@string/personnelNumber}"
                app:setValue="@{viewModel.userInfoLiveData.personnelNumber}"
                app:setSplitter="@{@string/dot}"/>

            <LinearLayout
                android:id="@+id/linearLayoutSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageViewProfile"
                android:padding="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:background="@drawable/drawable_border_curve_light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/iransans_medium"
                    android:text="@string/supportNumber"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/dismiss"
                    android:fontFamily="@font/iransans_light"
                    android:text="@string/contactSupport"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSupport1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutSupport"
                android:padding="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:background="@drawable/drawable_border_curve_light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/iransans_medium"
                    android:text="@string/supportNumber"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/dismiss"
                    android:fontFamily="@font/iransans_light"
                    android:text="@string/contactSupport"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSupport2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutSupport1"
                android:padding="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:background="@drawable/drawable_border_curve_light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/iransans_medium"
                    android:text="@string/supportNumber"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/dismiss"
                    android:fontFamily="@font/iransans_light"
                    android:text="@string/contactSupport"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutFinger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutSupport2"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/drawable_login_fingerprint"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:theme="@style/switchStyle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9sdp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/yekan_bakh_medium"
                    android:drawablePadding="@dimen/_10sdp"
                    app:drawableEndCompat="@drawable/ic_finger_print"
                    app:drawableTint="@color/primaryColor"
                    android:text="@string/fingerprint"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSignOut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/linearLayoutFinger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/linearLayoutFinger"
                app:layout_constraintBottom_toBottomOf="@id/linearLayoutFinger"
                android:layout_marginEnd="@dimen/_5sdp"
                android:padding="@dimen/_7sdp"
                android:orientation="horizontal"
                android:background="@drawable/drawable_border_curve_light">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_8sdp"
                    android:gravity="center"
                    android:textColor="@color/rejectFactorText"
                    android:fontFamily="@font/iransans_bold"
                    android:text="@string/signOut"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
