<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toTopOf="@id/linearLayoutVisitor"
            app:layout_constraintStart_toStartOf="@id/linearLayoutState"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutCustomer"
            android:background="@drawable/drawable_tab_selected" />

        <LinearLayout
            android:id="@+id/linearLayoutState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/linearLayoutVisitor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/linearLayoutVisitor"
            android:layout_marginStart="@dimen/_15sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_3sdp">

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/visitorName"
                android:textSize="@dimen/_7sdp"
                android:textColor="@color/white"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:fontFamily="@font/yekan_bakh_medium"/>

        </LinearLayout>

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/spinnerOrderState"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/linearLayoutState"
            app:layout_constraintStart_toStartOf="@id/linearLayoutState"
            app:layout_constraintBottom_toBottomOf="@id/linearLayoutState"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutState"
            android:fontFamily="@font/yekan_bakh_medium"
            android:gravity="center"
            android:hint="@string/orderState"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/dismiss"
            android:textSize="@dimen/_7sdp"
            app:spinner_arrow_show="false"
            app:spinner_divider_color="@color/dismiss"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_popup_background="@drawable/drawable_spinner_background"
            app:spinner_popup_height="@dimen/_70sdp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_elevation="5dp"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/linearLayoutVisitor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/linearLayoutState"
            app:layout_constraintEnd_toStartOf="@id/linearLayoutDate"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_3sdp">
            
            <TextView
                android:id="@+id/textViewVisitor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/visitorName"
                android:textSize="@dimen/_7sdp"
                android:textColor="@color/white"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:fontFamily="@font/yekan_bakh_medium"/>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/linearLayoutVisitor"
            app:layout_constraintStart_toEndOf="@id/linearLayoutVisitor"
            app:layout_constraintEnd_toStartOf="@id/linearLayoutCustomer"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_3sdp">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startEndDate"
                android:textSize="@dimen/_7sdp"
                android:textColor="@color/white"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:fontFamily="@font/yekan_bakh_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCustomer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/linearLayoutVisitor"
            app:layout_constraintStart_toEndOf="@id/linearLayoutDate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_15sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_3sdp">

            <TextView
                android:id="@+id/textViewCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/customerName"
                android:textSize="@dimen/_7sdp"
                android:textColor="@color/white"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:fontFamily="@font/yekan_bakh_medium"/>

        </LinearLayout>

        <View
            android:id="@+id/viewState"
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutState"
            android:background="@drawable/drawable_tab_selected"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutState"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <View
            android:id="@+id/viewVisitor"
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutVisitor"
            android:background="@drawable/drawable_tab_selected"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutVisitor"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <View
            android:id="@+id/viewDate"
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutDate"
            android:background="@drawable/drawable_tab_selected"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutDate"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <View
            android:id="@+id/viewCustomer"
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutCustomer"
            android:background="@drawable/drawable_tab_selected"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutCustomer"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/recyclerItem"
            app:layout_constraintBottom_toBottomOf="@id/recyclerItem"
            app:layout_constraintStart_toStartOf="@id/recyclerItem"
            app:layout_constraintEnd_toEndOf="@id/recyclerItem">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/recyclerLoadingBack"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerItem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/viewVisitor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonConfirmFactor"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp" />

        <com.hoomanholding.applibrary.view.custom.JpaButton
            android:id="@+id/buttonConfirmFactor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/recyclerItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonRejectFactor"
            android:textSize="@dimen/_10sdp"
            app:cornerRadius="@dimen/_7sdp"
            android:shadowRadius="@integer/material_motion_duration_long_2"
            app:backgroundTint="@null"
            android:background="@drawable/drawable_confirm_button"
            android:fontFamily="@font/iransans_medium"
            android:textColor="@color/confirmFactorText"
            android:text='@string/confirmOrder' />

        <com.hoomanholding.applibrary.view.custom.JpaButton
            android:id="@+id/buttonRejectFactor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/buttonConfirmFactor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/recyclerItem"
            android:textSize="@dimen/_10sdp"
            app:cornerRadius="@dimen/_7sdp"
            android:shadowRadius="@integer/material_motion_duration_long_2"
            android:layout_marginStart="@dimen/_10sdp"
            app:backgroundTint="@null"
            android:background="@drawable/drawable_reject_button"
            android:fontFamily="@font/iransans_medium"
            android:textColor="@color/rejectFactorText"
            android:text='@string/rejectOrder' />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
